--- a/index.html
+++ b/index.html
@@ -18,19 +18,23 @@
 
         <!-- Sidebar with image -->
         <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
-            <div class="bgimg"></div>
+            <div class="bgimg">
+            
+                <img src="https://thumbs.dreamstime.com/b/people-using-mobile-phones-38369068.jpg" style="width: 535px; height: 660px;">
+            
+            </div>
         </nav>
 
         <!-- Hidden Sidebar (reveals when clicked on menu icon)-->
-        <nav class="w3-sidebar w3-black w3-animate-right w3-xxlarge" style="display:none;padding-top:150px;right:0;z-index:2" id="mySidebar">
-            <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-black w3-xxxlarge w3-display-topright" style="padding:0 12px;">
-                <i class="fa fa-remove"></i>
+        <nav class="w3-sidebar w3-theme w3-animate-right w3-xxlarge" style="display:none;padding-top:150px;right:0;z-index:2" id="mySidebar">
+            <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-theme w3-xxxlarge w3-display-topright" style="padding:0 12px;">
+                <i class="fa fa-remove w3-theme"></i>
             </a>
-            <div class="w3-bar-block w3-center">
-                <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Introduction</a>
-                <a href="#portfolio" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Statistics</a>
-                <a href="#about" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Interviews</a>
-                <a href="#contact" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Thanks</a>
+            <div class="w3-bar-block w3-center w3-theme">
+                <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-white" onclick="closeNav()">Introduction</a>
+                <a href="#portfolio" class="w3-bar-item w3-button w3-text-grey w3-hover-white" onclick="closeNav()">Statistics</a>
+                <a href="#about" class="w3-bar-item w3-button w3-text-grey w3-hover-white" onclick="closeNav()">Interviews</a>
+                <a href="#contact" class="w3-bar-item w3-button w3-text-grey w3-hover-white" onclick="closeNav()">Thanks</a>
             </div>
         </nav>
 
@@ -46,55 +50,28 @@
                 <p>Making the world more, NOT less, social.</p>
                 <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
                 <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-                <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
-                    <i class="fa fa-download"></i> Download Resume
-                </button>
             </header>
-
-            <!-- Portfolio Section -->
-            <div class="w3-padding-32 w3-content" id="portfolio">
-                <h2 class="w3-text-grey">My Portfolio</h2>
-                <hr class="w3-opacity">
-
-                <!-- Grid for photos -->
-                <div class="w3-row-padding" style="margin:0 -16px">
-                    <div class="w3-half">
-                        <img src="/w3images/wedding.jpg" style="width:100%">
-                        <img src="/w3images/rocks.jpg" style="width:100%">
-                        <img src="/w3images/sailboat.jpg" style="width:100%">
-                    </div>
-
-                    <div class="w3-half">
-                        <img src="/w3images/underwater.jpg" style="width:100%">
-                        <img src="/w3images/chef.jpg" style="width:100%">
-                        <img src="/w3images/wedding.jpg" style="width:100%">
-                        <img src="/w3images/p6.jpg" style="width:100%">
-                    </div>
-                    <!-- End photo grid -->
-                </div>
-                <!-- End Portfolio Section -->
-            </div>
 
             <!-- About Section -->
             <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
-                <h2>About</h2>
+                <h2>Introduction</h2>
                 <hr class="w3-opacity">
                 <p>Some text about me. Some text about me. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing
                     elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
-                <h3 class="w3-padding-16">My Skills</h3>
+                <h3 class="w3-padding-16">Numbers and Stats</h3>
                 <p class="w3-wide">Photography</p>
                 <div class="w3-light-grey">
-                    <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:95%">95%</div>
+                    <div class="w3-container w3-center w3-padding-small w3-theme-l2" style="width:95%">95%</div>
                 </div>
                 <p class="w3-wide">Web Design</p>
                 <div class="w3-light-grey">
-                    <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">85%</div>
+                    <div class="w3-container w3-center w3-padding-small w3-theme-l2" style="width:85%">85%</div>
                 </div>
                 <p class="w3-wide">Photoshop</p>
                 <div class="w3-light-grey">
-                    <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:80%">80%</div>
+                    <div class="w3-container w3-center w3-padding-small w3-theme-l2" style="width:80%">80%</div>
                 </div><br>
 
                 <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section">
@@ -135,11 +112,11 @@
                 <p>No one is better than Jane Doe.</p><br>
 
                 <!-- Grid for pricing tables -->
-                <h3 class="w3-padding-16">My Price</h3>
+                <h3 class="w3-padding-16">Numbers and Statistics</h3>
                 <div class="w3-row-padding" style="margin:0 -16px">
                     <div class="w3-half w3-margin-bottom">
                         <ul class="w3-ul w3-center w3-card w3-hover-shadow">
-                            <li class="w3-dark-grey w3-xlarge w3-padding-32">Basic</li>
+                            <li class="w3-dark-grey w3-xlarge w3-padding-32">Activity</li>
                             <li class="w3-padding-16">Web Design</li>
                             <li class="w3-padding-16">Photography</li>
                             <li class="w3-padding-16">5GB Storage</li>
@@ -156,7 +133,7 @@
 
                     <div class="w3-half">
                         <ul class="w3-ul w3-center w3-card w3-hover-shadow">
-                            <li class="w3-black w3-xlarge w3-padding-32">Pro</li>
+                            <li class="w3-black w3-xlarge w3-padding-32">With Tech</li>
                             <li class="w3-padding-16">Web Design</li>
                             <li class="w3-padding-16">Photography</li>
                             <li class="w3-padding-16">50GB Storage</li>
@@ -182,22 +159,11 @@
                 <hr class="w3-opacity">
 
                 <div class="w3-section">
-                    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Chicago, US</p>
-                    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
-                    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
+                    <p>Pete Vacarro</p>
+                    <p>Huffington Post</p>
+                    <p>Smithsonian</p>
+                    <p>BBC</p>
                 </div>
-
-                <!-- Footer -->
-                <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
-                    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-                    <i class="fa fa-instagram w3-hover-opacity"></i>
-                    <i class="fa fa-snapchat w3-hover-opacity"></i>
-                    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-                    <i class="fa fa-twitter w3-hover-opacity"></i>
-                    <i class="fa fa-linkedin w3-hover-opacity"></i>
-                    <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-                    <!-- End footer -->
-                </footer>
 
                 <!-- END PAGE CONTENT -->
             </div>
