Ok for real this time

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>W3.CSS Template</title>
+        <title>Technology - More Social than Ever</title>
 
         <meta charset="UTF-8">
 
